[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "dgg_rules_somatic"
version = "0.1.0"
description = "DGG Variant Interpretation Engine - automated classification of genomic variants for clinical reporting"
authors = [
    {name = "Vincent Laufer, MD, PhD", email = "vincent.a.laufer@gmail.com"}
]
maintainers = [
    {name = "Vincent Laufer, MD, PhD", email = "vincent.a.laufer@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["cancer", "genomics", "variant-interpretation", "dgg"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "sqlmodel>=0.0.14",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "pandas>=2.1.0",
    "streamlit>=1.28.0",
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
dgg-rules-somatic = "dgg_engine.main:cli"

[project.urls]
Homepage = "https://github.com/LauferVA/dgg_rules_somatic"
Documentation = "https://github.com/LauferVA/dgg_rules_somatic"
Repository = "https://github.com/LauferVA/dgg_rules_somatic"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
sqlmodel = "^0.0.14"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
pandas = "^2.1.0"
streamlit = "^1.28.0"
pytest = "^7.4.0"
httpx = "^0.25.0"
jinja2 = "^3.1.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
